[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.0.0"

[workspace.dependencies]
egui = "0.31.1"
eframe = "0.31.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
log = "0.4.27"
clap = "4.5.40"
dirs = "6.0.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"